tests/NormalTests/paczka1/small_fuzzy/78800344.err
Error in line 5: S635 S173 -2,2
Error in line 13: hlXtoOnT S635 34,1
Error in line 15: KpBVMH688 S1
Error in line 16: 3 54,3
Error in line 14: hlXtoOnT S173 35,8
